# vigil-hypertrace

./: .env.example  .gitignore  README.md  claude.md  docker-compose.yml  find_new.txt  justfile  load.txt  main.py  new_smart_money_20250801.csv  new_smart_money_20250801.jsonl  pyproject.toml  refresh-stuff.txt  watchlist.csv
docs/: 02_hyperliquid_reference.md  03_data_pipeline.md  ANALYSIS_GUIDE.md  API_BACKFILL_PLAN.md  ARCHITECTURE.md  DATA_ARCHITECTURE.md  DATA_INGESTION.md  DATA_PIPELINE_PLAN.md  DATA_SCIENCE_GUIDE.md  HYPERLIQUID_DATA_FORMATS.md  HYPERLIQUID_DATA_RESEARCH.md  HYPERLIQUID_FILL_RECONSTRUCTION.md  HYPERLIQUID_S3_REFERENCE.md  SETUP.md  VISION.md  data-visualization.md  hyperliquid-data-providers-research.md  hyperliquid-s3-structure.md  vigil-project-plan.md
hyperliquid_samples/: README.md
lambda/http_proxy/: handler.py
notebooks/: 00_overview.ipynb  01_explore_blocks.ipynb  01_explore_data.ipynb  01_hyperliquid_sampler.ipynb  01_overview.ipynb  02_analysis_pipeline.ipynb  02_download_data.ipynb  03_analyze_traders.ipynb  03_db_analysis.ipynb  04_matching_engine.ipynb  db_analysis.ipynb  db_trader_pipeline.ipynb
scripts/: cloud_load.py  cloud_sample.py  deploy_lambda.py  fetch_data.py  find_new_smart_money.py  inspect_parquet.py  load_sample_local.py  load_to_db.py  local_load.py  sample_data.py  sum_closed_pnl.py
sql/: 001_fills.sql  002_load_tracking.sql  002_transformations.sql  003_continuous_aggregates.sql  004_fix_stuff.sql  schema.sql
src/vigil/: __init__.py  config.py  db.py  s3.py  transforms.py
(+2 files in other folders)
